--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,11 +1,4 @@
-Hello World 
-pipeline{
- agent any
-  stages{
-   stage{
-    steps{
-     sh 'pwd'
-    }
-   }
- }    
+Hello World{
+This is a Public Repository
 }
+
